test fix for buggy navbar on mobile

--- a/index.css
+++ b/index.css
@@ -100,7 +100,8 @@ header {
     header > .navbar {
         padding-top: 1em;
         margin-left: 2em;
-        display: none ;
+        display: none;
+        max-height: fit-content;
         flex-direction: column;
         align-items: center;
         padding-bottom: 1em;
